exports[`Storyshots CategoryMenu four categories 1`] = `
<nav
  className="CategoryMenu">
  <ul>
    <li
      className="active">
      <a
        href="/"
        onClick={[Function]}>
        home
      </a>
    </li>
    <li
      className="">
      <a
        href="/abbigliamento%20uomo"
        onClick={[Function]}>
        abbigliamento uomo
      </a>
    </li>
    <li
      className="">
      <a
        href="/abbigliamento%20donna"
        onClick={[Function]}>
        abbigliamento donna
      </a>
    </li>
    <li
      className="">
      <a
        href="/scarpe"
        onClick={[Function]}>
        scarpe
      </a>
    </li>
    <li
      className="">
      <a
        href="/accessori"
        onClick={[Function]}>
        accessori
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots DropDownItem one DropDownItem 1`] = `
<article
  className="DropDownItem">
  <div
    className="card">
    <div
      className="image">
      <img
        alt="Placeat voluptates repellendus"
        src="placehold.png" />
    </div>
    <div
      className="info">
      <div
        className="name">
        Placeat voluptates repellendus
      </div>
      <div
        className="price">
        €
        233.34
      </div>
    </div>
  </div>
</article>
`;

exports[`Storyshots DropDownList empty 1`] = `null`;

exports[`Storyshots DropDownList with many items 1`] = `
<div
  className="DropDownList">
  <section
    className="items">
    <article
      className="DropDownItem">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
        </div>
      </div>
    </article>
    <article
      className="DropDownItem">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
        </div>
      </div>
    </article>
    <article
      className="DropDownItem">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
        </div>
      </div>
    </article>
    <article
      className="DropDownItem">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
        </div>
      </div>
    </article>
    <article
      className="DropDownItem">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
        </div>
      </div>
    </article>
    <article
      className="DropDownItem">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
        </div>
      </div>
    </article>
    <article
      className="DropDownItem">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
        </div>
      </div>
    </article>
    <article
      className="DropDownItem">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
        </div>
      </div>
    </article>
    <article
      className="DropDownItem">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
        </div>
      </div>
    </article>
  </section>
</div>
`;

exports[`Storyshots DropDownList with one item 1`] = `
<div
  className="DropDownList">
  <section
    className="items">
    <article
      className="DropDownItem">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
        </div>
      </div>
    </article>
  </section>
</div>
`;

exports[`Storyshots DropDownList wrong search 1`] = `
<div
  className="DropDownList">
  <div
    className="empty">
    No items availables
  </div>
</div>
`;

exports[`Storyshots Item Item in Stock en 1`] = `
<article
  className="Item">
  <div
    className="card">
    <div
      className="image">
      <img
        alt="Placeat voluptates repellendus"
        src="placehold.png" />
    </div>
    <div
      className="info">
      <div
        className="name">
        Placeat voluptates repellendus
      </div>
      <div
        className="price">
        €
        233.34
      </div>
      <div
        className="description block-with-text">
        Deserunt ut quae architecto error assumenda exercitationem occaecati.
      </div>
      <div
        className="overlay">
        <div>
          <button
            className="addToCart"
            onClick={[Function]}>
            Add To Cart
          </button>
          <button
            className="buttonDisabled"
            disabled={true}>
            Remove from Cart
          </button>
        </div>
      </div>
    </div>
    <div
      className="in_Stock">
      ✅
      <p>
        In Stock
      </p>
    </div>
  </div>
</article>
`;

exports[`Storyshots Item Item in Stock it 1`] = `
<article
  className="Item">
  <div
    className="card">
    <div
      className="image">
      <img
        alt="Placeat voluptates repellendus"
        src="placehold.png" />
    </div>
    <div
      className="info">
      <div
        className="name">
        Placeat voluptates repellendus
      </div>
      <div
        className="price">
        €
        233.34
      </div>
      <div
        className="description block-with-text">
        Deserunt ut quae architecto error assumenda exercitationem occaecati.
      </div>
      <div
        className="overlay">
        <div>
          <button
            className="addToCart"
            onClick={[Function]}>
            Aggiungi al Carrello
          </button>
          <button
            className="buttonDisabled"
            disabled={true}>
            Rimuovi dal Carrello
          </button>
        </div>
      </div>
    </div>
    <div
      className="in_Stock">
      ✅
      <p>
        Disponible
      </p>
    </div>
  </div>
</article>
`;

exports[`Storyshots Item Item out Stock 1`] = `
<article
  className="Item">
  <div
    className="card">
    <div
      className="image">
      <img
        alt="Placeat voluptates repellendus"
        src="placehold.png" />
    </div>
    <div
      className="info">
      <div
        className="name">
        Placeat voluptates repellendus
      </div>
      <div
        className="price">
        €
        233.34
      </div>
      <div
        className="description block-with-text">
        Deserunt ut quae architecto error assumenda exercitationem occaecati.
      </div>
    </div>
    <div
      className="in_Stock">
      ❌
      <p>
        Out of Stock
      </p>
    </div>
  </div>
</article>
`;

exports[`Storyshots Item Item out Stock it 1`] = `
<article
  className="Item">
  <div
    className="card">
    <div
      className="image">
      <img
        alt="Placeat voluptates repellendus"
        src="placehold.png" />
    </div>
    <div
      className="info">
      <div
        className="name">
        Placeat voluptates repellendus
      </div>
      <div
        className="price">
        €
        233.34
      </div>
      <div
        className="description block-with-text">
        Deserunt ut quae architecto error assumenda exercitationem occaecati.
      </div>
    </div>
    <div
      className="in_Stock">
      ❌
      <p>
        Non Disponibile
      </p>
    </div>
  </div>
</article>
`;

exports[`Storyshots Itemlist empty en 1`] = `
<div
  className="ItemList">
  <div
    className="empty">
    No items availables
  </div>
</div>
`;

exports[`Storyshots Itemlist empty it 1`] = `
<div
  className="ItemList">
  <div
    className="empty">
    Nessun items disponibile
  </div>
</div>
`;

exports[`Storyshots Itemlist with many items 1`] = `
<div
  className="ItemList">
  <section
    className="items">
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
          <div
            className="overlay">
            <div>
              <button
                className="addToCart"
                onClick={[Function]}>
                Add To Cart
              </button>
              <button
                className="buttonDisabled"
                disabled={true}>
                Remove from Cart
              </button>
            </div>
          </div>
        </div>
        <div
          className="in_Stock">
          ✅
          <p>
            In Stock
          </p>
        </div>
      </div>
    </article>
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
          <div
            className="overlay">
            <div>
              <button
                className="addToCart"
                onClick={[Function]}>
                Add To Cart
              </button>
              <button
                className="buttonDisabled"
                disabled={true}>
                Remove from Cart
              </button>
            </div>
          </div>
        </div>
        <div
          className="in_Stock">
          ✅
          <p>
            In Stock
          </p>
        </div>
      </div>
    </article>
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
          <div
            className="overlay">
            <div>
              <button
                className="addToCart"
                onClick={[Function]}>
                Add To Cart
              </button>
              <button
                className="buttonDisabled"
                disabled={true}>
                Remove from Cart
              </button>
            </div>
          </div>
        </div>
        <div
          className="in_Stock">
          ✅
          <p>
            In Stock
          </p>
        </div>
      </div>
    </article>
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
          <div
            className="overlay">
            <div>
              <button
                className="addToCart"
                onClick={[Function]}>
                Add To Cart
              </button>
              <button
                className="buttonDisabled"
                disabled={true}>
                Remove from Cart
              </button>
            </div>
          </div>
        </div>
        <div
          className="in_Stock">
          ✅
          <p>
            In Stock
          </p>
        </div>
      </div>
    </article>
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
          <div
            className="overlay">
            <div>
              <button
                className="addToCart"
                onClick={[Function]}>
                Add To Cart
              </button>
              <button
                className="buttonDisabled"
                disabled={true}>
                Remove from Cart
              </button>
            </div>
          </div>
        </div>
        <div
          className="in_Stock">
          ✅
          <p>
            In Stock
          </p>
        </div>
      </div>
    </article>
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
          <div
            className="overlay">
            <div>
              <button
                className="addToCart"
                onClick={[Function]}>
                Add To Cart
              </button>
              <button
                className="buttonDisabled"
                disabled={true}>
                Remove from Cart
              </button>
            </div>
          </div>
        </div>
        <div
          className="in_Stock">
          ✅
          <p>
            In Stock
          </p>
        </div>
      </div>
    </article>
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
          <div
            className="overlay">
            <div>
              <button
                className="addToCart"
                onClick={[Function]}>
                Add To Cart
              </button>
              <button
                className="buttonDisabled"
                disabled={true}>
                Remove from Cart
              </button>
            </div>
          </div>
        </div>
        <div
          className="in_Stock">
          ✅
          <p>
            In Stock
          </p>
        </div>
      </div>
    </article>
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
          <div
            className="overlay">
            <div>
              <button
                className="addToCart"
                onClick={[Function]}>
                Add To Cart
              </button>
              <button
                className="buttonDisabled"
                disabled={true}>
                Remove from Cart
              </button>
            </div>
          </div>
        </div>
        <div
          className="in_Stock">
          ✅
          <p>
            In Stock
          </p>
        </div>
      </div>
    </article>
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
          <div
            className="overlay">
            <div>
              <button
                className="addToCart"
                onClick={[Function]}>
                Add To Cart
              </button>
              <button
                className="buttonDisabled"
                disabled={true}>
                Remove from Cart
              </button>
            </div>
          </div>
        </div>
        <div
          className="in_Stock">
          ✅
          <p>
            In Stock
          </p>
        </div>
      </div>
    </article>
  </section>
</div>
`;

exports[`Storyshots Itemlist with one item 1`] = `
<div
  className="ItemList">
  <section
    className="items">
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
          <div
            className="overlay">
            <div>
              <button
                className="addToCart"
                onClick={[Function]}>
                Add To Cart
              </button>
              <button
                className="buttonDisabled"
                disabled={true}>
                Remove from Cart
              </button>
            </div>
          </div>
        </div>
        <div
          className="in_Stock">
          ✅
          <p>
            In Stock
          </p>
        </div>
      </div>
    </article>
  </section>
</div>
`;

exports[`Storyshots Login empty login en 1`] = `
<div
  className="Login">
  <h1
    className="title">
    Fill the form to login
  </h1>
  <div
    className="box">
    <img
      alt="User"
      className="profile-img"
      src="login.png" />
    <form
      className="form-signin"
      onSubmit={[Function]}>
      <div
        className="error">
        
      </div>
      <input
        className="form-control"
        name="email"
        onChange={[Function]}
        placeholder="Insert your email"
        required={true}
        type="email"
        value="" />
      <input
        className="form-control"
        name="password"
        onChange={[Function]}
        placeholder="Insert your password"
        required={true}
        type="password"
        value="" />
      <button
        className="submit"
        type="submit">
        Login
      </button>
      <div
        className="moreinfo">
        <label
          className="rememberme">
          <input
            type="checkbox"
            value="ricordami" />
           
          Remember me
        </label>
        <a
          className="help"
          href="#">
          Do you need help?
        </a>
      </div>
    </form>
  </div>
  <a
    className="register"
    href="#">
    Register
  </a>
</div>
`;

exports[`Storyshots Login empty login it 1`] = `
<div
  className="Login">
  <h1
    className="title">
    Inserisci i tuoi dati per il login
  </h1>
  <div
    className="box">
    <img
      alt="User"
      className="profile-img"
      src="login.png" />
    <form
      className="form-signin"
      onSubmit={[Function]}>
      <div
        className="error">
        
      </div>
      <input
        className="form-control"
        name="email"
        onChange={[Function]}
        placeholder="Inserisci la tua email"
        required={true}
        type="email"
        value="" />
      <input
        className="form-control"
        name="password"
        onChange={[Function]}
        placeholder="Inserisci la tua password"
        required={true}
        type="password"
        value="" />
      <button
        className="submit"
        type="submit">
        Accedi
      </button>
      <div
        className="moreinfo">
        <label
          className="rememberme">
          <input
            type="checkbox"
            value="ricordami" />
           
          Ricordami
        </label>
        <a
          className="help"
          href="#">
          Bisogno di aiuto?
        </a>
      </div>
    </form>
  </div>
  <a
    className="register"
    href="#">
    Registrati
  </a>
</div>
`;

exports[`Storyshots PersonalArea default 1`] = `
<section
  className="PersonalArea">
  <h1>
    Personal Area
  </h1>
  <div
    className="content">
    <aside>
      <section
        className="SidebarMenu">
        <ul>
          <li
            className="active"
            onClick={[Function]}>
            <a
              href="#">
              Dati personali
            </a>
          </li>
          <li
            className=""
            onClick={[Function]}>
            <a
              href="#">
              Dati di spedizione
            </a>
          </li>
        </ul>
      </section>
    </aside>
    <article>
      <section
        className="PersonalAreaPersonalData">
        <h1>
          Edit your personal data
        </h1>
        <form
          className="form"
          onSubmit={[Function]}>
          <div>
            <label>
              First name
            </label>
            <input
              className="form-control"
              type="text"
              value="Pino" />
          </div>
          <div>
            <label>
              Last name
            </label>
            <input
              className="form-control"
              type="text"
              value="Silvestre" />
          </div>
          <div>
            <label>
              Email
            </label>
            <input
              className="form-control"
              type="email"
              value="pino.silvestre@gmail.com" />
          </div>
          <div>
            <label />
            <input
              type="submit"
              value="Save" />
          </div>
        </form>
      </section>
    </article>
  </div>
</section>
`;

exports[`Storyshots PersonalAreaAddressData default 1`] = `
<section
  className="PersonalAreaAddressData">
  <h1>
    Modifica i tuoi dati di spedizione
  </h1>
</section>
`;

exports[`Storyshots PersonalAreaPersonalData default 1`] = `
<section
  className="PersonalAreaPersonalData">
  <h1>
    Modifica i tuoi dati personali
  </h1>
  <form
    className="form"
    onSubmit={[Function]}>
    <div>
      <label>
        Nome
      </label>
      <input
        className="form-control"
        type="text"
        value="Pino" />
    </div>
    <div>
      <label>
        Cognome
      </label>
      <input
        className="form-control"
        type="text"
        value="Silvestre" />
    </div>
    <div>
      <label>
        Email
      </label>
      <input
        className="form-control"
        type="email"
        value="pino.silvestre@gmail.com" />
    </div>
    <div>
      <label />
      <input
        type="submit"
        value="Salva" />
    </div>
  </form>
</section>
`;

exports[`Storyshots Register empty form en 1`] = `
<div
  className="Register">
  <h1
    className="title">
    Fill the form to register
  </h1>
  <div
    className="box">
    <form
      className="form-signin"
      onSubmit={[Function]}>
      <div
        className="error">
        
      </div>
      <input
        className="form-control "
        name="first_name"
        onChange={[Function]}
        placeholder="Insert your first name"
        required={true}
        type="text"
        value="" />
      <div
        className="error-message hidden" />
      <input
        className="form-control "
        name="last_name"
        onChange={[Function]}
        placeholder="Insert your last name"
        required={true}
        type="text"
        value="" />
      <input
        className="form-control "
        name="email"
        onChange={[Function]}
        placeholder="Insert your email"
        required={true}
        type="email"
        value="" />
      <div
        className="error-message hidden" />
      <input
        className="form-control "
        name="password1"
        onChange={[Function]}
        placeholder="Insert your password"
        required={true}
        type="password"
        value="" />
      <input
        className="form-control "
        name="password2"
        onChange={[Function]}
        placeholder="Re-insert your password"
        required={true}
        type="password"
        value="" />
      <button
        className="submit"
        type="submit">
        Register
      </button>
      <div
        className="moreinfo">
        <a
          className="help"
          href="#">
          Do you need help?
        </a>
      </div>
    </form>
  </div>
  <a
    className="login"
    href="#">
    Go to your account
  </a>
</div>
`;

exports[`Storyshots Register empty form it 1`] = `
<div
  className="Register">
  <h1
    className="title">
    Inserisci i tuoi dati per registrarti
  </h1>
  <div
    className="box">
    <form
      className="form-signin"
      onSubmit={[Function]}>
      <div
        className="error">
        
      </div>
      <input
        className="form-control "
        name="first_name"
        onChange={[Function]}
        placeholder="Inserisci il tuo nome"
        required={true}
        type="text"
        value="" />
      <div
        className="error-message hidden" />
      <input
        className="form-control "
        name="last_name"
        onChange={[Function]}
        placeholder="Inserisci il tuo cognome"
        required={true}
        type="text"
        value="" />
      <input
        className="form-control "
        name="email"
        onChange={[Function]}
        placeholder="Inserisci la tua email"
        required={true}
        type="email"
        value="" />
      <div
        className="error-message hidden" />
      <input
        className="form-control "
        name="password1"
        onChange={[Function]}
        placeholder="Inserisci la tua password"
        required={true}
        type="password"
        value="" />
      <input
        className="form-control "
        name="password2"
        onChange={[Function]}
        placeholder="Riscrivi la tua password"
        required={true}
        type="password"
        value="" />
      <button
        className="submit"
        type="submit">
        Registrati
      </button>
      <div
        className="moreinfo">
        <a
          className="help"
          href="#">
          Bisogno di aiuto?
        </a>
      </div>
    </form>
  </div>
  <a
    className="login"
    href="#">
    Accedi al tuo account
  </a>
</div>
`;

exports[`Storyshots Register form with first name empty and email not correct 1`] = `
<div
  className="Register">
  <h1
    className="title">
    Fill the form to register
  </h1>
  <div
    className="box">
    <form
      className="form-signin"
      onSubmit={[Function]}>
      <div
        className="error">
        Form errors
      </div>
      <input
        className="form-control form-error"
        name="first_name"
        onChange={[Function]}
        placeholder="Insert your first name"
        required={true}
        type="text"
        value="" />
      <div
        className="error-message show">
        Empty field
      </div>
      <input
        className="form-control "
        name="last_name"
        onChange={[Function]}
        placeholder="Insert your last name"
        required={true}
        type="text"
        value="" />
      <input
        className="form-control form-error"
        name="email"
        onChange={[Function]}
        placeholder="Insert your email"
        required={true}
        type="email"
        value="" />
      <div
        className="error-message show">
        Field not correct
      </div>
      <input
        className="form-control "
        name="password1"
        onChange={[Function]}
        placeholder="Insert your password"
        required={true}
        type="password"
        value="" />
      <input
        className="form-control "
        name="password2"
        onChange={[Function]}
        placeholder="Re-insert your password"
        required={true}
        type="password"
        value="" />
      <button
        className="submit"
        type="submit">
        Register
      </button>
      <div
        className="moreinfo">
        <a
          className="help"
          href="#">
          Do you need help?
        </a>
      </div>
    </form>
  </div>
  <a
    className="login"
    href="#">
    Go to your account
  </a>
</div>
`;

exports[`Storyshots SearchBar dropDownList search many item 1`] = `
<div>
  <div
    className="SearchBar">
    <form
      className="box"
      onSubmit={[Function]}>
      <input
        name="search"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Search"
        type="text"
        value="" />
      <button
        className="submit" />
    </form>
  </div>
  <div
    className="DropDownList">
    <section
      className="items">
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
    </section>
  </div>
</div>
`;

exports[`Storyshots SearchBar dropDownList search many item and itemList 1`] = `
<div>
  <div
    className="SearchBar">
    <form
      className="box"
      onSubmit={[Function]}>
      <input
        name="search"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Search"
        type="text"
        value="" />
      <button
        className="submit" />
    </form>
  </div>
  <div
    className="DropDownList">
    <section
      className="items">
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
    </section>
  </div>
  <div
    className="ItemList">
    <section
      className="items">
      <article
        className="Item">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
            <div
              className="description block-with-text">
              Deserunt ut quae architecto error assumenda exercitationem occaecati.
            </div>
            <div
              className="overlay">
              <div>
                <button
                  className="addToCart"
                  onClick={[Function]}>
                  Add To Cart
                </button>
                <button
                  className="buttonDisabled"
                  disabled={true}>
                  Remove from Cart
                </button>
              </div>
            </div>
          </div>
          <div
            className="in_Stock">
            ✅
            <p>
              In Stock
            </p>
          </div>
        </div>
      </article>
      <article
        className="Item">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
            <div
              className="description block-with-text">
              Deserunt ut quae architecto error assumenda exercitationem occaecati.
            </div>
            <div
              className="overlay">
              <div>
                <button
                  className="addToCart"
                  onClick={[Function]}>
                  Add To Cart
                </button>
                <button
                  className="buttonDisabled"
                  disabled={true}>
                  Remove from Cart
                </button>
              </div>
            </div>
          </div>
          <div
            className="in_Stock">
            ✅
            <p>
              In Stock
            </p>
          </div>
        </div>
      </article>
      <article
        className="Item">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
            <div
              className="description block-with-text">
              Deserunt ut quae architecto error assumenda exercitationem occaecati.
            </div>
            <div
              className="overlay">
              <div>
                <button
                  className="addToCart"
                  onClick={[Function]}>
                  Add To Cart
                </button>
                <button
                  className="buttonDisabled"
                  disabled={true}>
                  Remove from Cart
                </button>
              </div>
            </div>
          </div>
          <div
            className="in_Stock">
            ✅
            <p>
              In Stock
            </p>
          </div>
        </div>
      </article>
      <article
        className="Item">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
            <div
              className="description block-with-text">
              Deserunt ut quae architecto error assumenda exercitationem occaecati.
            </div>
            <div
              className="overlay">
              <div>
                <button
                  className="addToCart"
                  onClick={[Function]}>
                  Add To Cart
                </button>
                <button
                  className="buttonDisabled"
                  disabled={true}>
                  Remove from Cart
                </button>
              </div>
            </div>
          </div>
          <div
            className="in_Stock">
            ✅
            <p>
              In Stock
            </p>
          </div>
        </div>
      </article>
      <article
        className="Item">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
            <div
              className="description block-with-text">
              Deserunt ut quae architecto error assumenda exercitationem occaecati.
            </div>
            <div
              className="overlay">
              <div>
                <button
                  className="addToCart"
                  onClick={[Function]}>
                  Add To Cart
                </button>
                <button
                  className="buttonDisabled"
                  disabled={true}>
                  Remove from Cart
                </button>
              </div>
            </div>
          </div>
          <div
            className="in_Stock">
            ✅
            <p>
              In Stock
            </p>
          </div>
        </div>
      </article>
      <article
        className="Item">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
            <div
              className="description block-with-text">
              Deserunt ut quae architecto error assumenda exercitationem occaecati.
            </div>
            <div
              className="overlay">
              <div>
                <button
                  className="addToCart"
                  onClick={[Function]}>
                  Add To Cart
                </button>
                <button
                  className="buttonDisabled"
                  disabled={true}>
                  Remove from Cart
                </button>
              </div>
            </div>
          </div>
          <div
            className="in_Stock">
            ✅
            <p>
              In Stock
            </p>
          </div>
        </div>
      </article>
      <article
        className="Item">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
            <div
              className="description block-with-text">
              Deserunt ut quae architecto error assumenda exercitationem occaecati.
            </div>
            <div
              className="overlay">
              <div>
                <button
                  className="addToCart"
                  onClick={[Function]}>
                  Add To Cart
                </button>
                <button
                  className="buttonDisabled"
                  disabled={true}>
                  Remove from Cart
                </button>
              </div>
            </div>
          </div>
          <div
            className="in_Stock">
            ✅
            <p>
              In Stock
            </p>
          </div>
        </div>
      </article>
      <article
        className="Item">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
            <div
              className="description block-with-text">
              Deserunt ut quae architecto error assumenda exercitationem occaecati.
            </div>
            <div
              className="overlay">
              <div>
                <button
                  className="addToCart"
                  onClick={[Function]}>
                  Add To Cart
                </button>
                <button
                  className="buttonDisabled"
                  disabled={true}>
                  Remove from Cart
                </button>
              </div>
            </div>
          </div>
          <div
            className="in_Stock">
            ✅
            <p>
              In Stock
            </p>
          </div>
        </div>
      </article>
      <article
        className="Item">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
            <div
              className="description block-with-text">
              Deserunt ut quae architecto error assumenda exercitationem occaecati.
            </div>
            <div
              className="overlay">
              <div>
                <button
                  className="addToCart"
                  onClick={[Function]}>
                  Add To Cart
                </button>
                <button
                  className="buttonDisabled"
                  disabled={true}>
                  Remove from Cart
                </button>
              </div>
            </div>
          </div>
          <div
            className="in_Stock">
            ✅
            <p>
              In Stock
            </p>
          </div>
        </div>
      </article>
    </section>
  </div>
</div>
`;

exports[`Storyshots SearchBar dropDownList search one item 1`] = `
<div>
  <div
    className="SearchBar">
    <form
      className="box"
      onSubmit={[Function]}>
      <input
        name="search"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Search"
        type="text"
        value="" />
      <button
        className="submit" />
    </form>
  </div>
  <div
    className="DropDownList">
    <section
      className="items">
      <article
        className="DropDownItem">
        <div
          className="card">
          <div
            className="image">
            <img
              alt="Placeat voluptates repellendus veniam."
              src="placehold.png" />
          </div>
          <div
            className="info">
            <div
              className="name">
              Placeat voluptates repellendus veniam.
            </div>
            <div
              className="price">
              €
              233.34
            </div>
          </div>
        </div>
      </article>
    </section>
  </div>
</div>
`;

exports[`Storyshots SearchBar dropDownList wrong empty 1`] = `
<div>
  <div
    className="SearchBar">
    <form
      className="box"
      onSubmit={[Function]}>
      <input
        name="search"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Search"
        type="text"
        value="" />
      <button
        className="submit" />
    </form>
  </div>
  <div
    className="DropDownList">
    <div
      className="empty">
      No items availables
    </div>
  </div>
</div>
`;

exports[`Storyshots SearchBar empty search en 1`] = `
<div
  className="SearchBar">
  <form
    className="box"
    onSubmit={[Function]}>
    <input
      name="search"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Search"
      type="text"
      value="" />
    <button
      className="submit" />
  </form>
</div>
`;

exports[`Storyshots SearchBar empty search it 1`] = `
<div
  className="SearchBar">
  <form
    className="box"
    onSubmit={[Function]}>
    <input
      name="search"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Cerca"
      type="text"
      value="" />
    <button
      className="submit" />
  </form>
</div>
`;

exports[`Storyshots SearchBox No results 1`] = `
<div>
  <div
    className="SearchBar">
    <form
      className="box"
      onSubmit={[Function]}>
      <input
        name="search"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Search"
        type="text"
        value="" />
      <button
        className="submit" />
    </form>
  </div>
</div>
`;

exports[`Storyshots SearchBox With results 1`] = `
<div>
  <div
    className="SearchBar">
    <form
      className="box"
      onSubmit={[Function]}>
      <input
        name="search"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Search"
        type="text"
        value="" />
      <button
        className="submit" />
    </form>
  </div>
</div>
`;

exports[`Storyshots SidebarMenu default 1`] = `
<section
  className="SidebarMenu">
  <ul>
    <li
      className="active"
      onClick={[Function]}>
      <a
        href="#">
        Dati personali
      </a>
    </li>
    <li
      className=""
      onClick={[Function]}>
      <a
        href="#">
        Dati di spedizione
      </a>
    </li>
  </ul>
</section>
`;
